[package]
name = "series_statistics_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
series_statistics = { git = "ssh://git@github.com/utcarnivaldayo/series_statistics.git ", branch = "main" }
csv = "1.1"
